feat: firebase와 연동해 회원가입, 로그인 기능 개발

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,11 @@ scraper.log
 # Authentication files
 auth_state.json
 
+# Firebase service account keys
+*firebase-adminsdk*.json
+firebase-service-account*.json
+service-account*.json
+
 # Poetry
 poetry.lock
 
